* lot of trace logging in Actor * Fixed bug which could cause lock when an Actor was resolving a descendant * trace logging in ActorContext & ActorRef * more detailed toString() for ChildExceptionMsg * added shallowCopy() to LRUCache * cleanup PodDeadLetterActor, RegisterPodDeadLetterMsg & PodManagerActor